[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
regex = "1.6.0"
status-line = "0.2.0"
tokio = { version = "1.21.0", features = ["signal", "net", "macros", "rt", "rt-multi-thread", "io-util", "sync", "time"] }
